# GenWebPush

./: .gitignore  README.MD  pyproject.toml  requirements.txt
src/genwebpush/: __init__.py  __main__.py  core.py  models.py
src/genwebpush/assets/: index.html  manifest.json  offline.html  sw.js
