[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genwebpush"
version = "0.1.3"
dynamic = ["dependencies"]
description = "A simple web push notification tool"
readme = "README.md"
requires-python = ">=3.8"
license = "LicenseRef-NCPUL"
license-files = ["LICENSE.md"]
authors = [{name = "yniverz", email = "hooped.dingos-81@icloud.com"}]
classifiers = [
  "Programming Language :: Python",
]

# ─── Optional console-script (pipx-style) ──────────────────────────────
[project.scripts]
genwebpush = "genwebpush.__main__:main"

# ─── Tell setuptools where the code lives and what data to include ────
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true          # respect MANIFEST.in + package-data

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"genwebpush" = ["assets/*.html", "assets/*.js"]
